# Friday-Night-Funkin-Qt-Reimplemented

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  ZHREADME.md  default_resources.qrc  main.cpp  main.qml  resources.rc
QML/: main.qml
QML/buttons/: DefaultButton.qml
QML/fonts/: MainFont.qml  Mainfont.qml
QML/views/info/: ViceCityInfo.qml
QML/views/modding/: EmptyModView.qml  ModItem.qml  Modlist.qml
QML/views/modding/detailview/: BottomBar.qml  ModDetailView.qml
QML/views/modding/detailview/sectionLoader/: AssetPreview.qml
android/: AndroidManifest.xml
android/src/com/kunkun/fnfqe/: PermissionHelper.java
assets/data/characters/: gf.json
docker/: Dockerfile
mods/default/data/characters/: bf.json
scripts/: copy_cpp.py  copy_structure.py
src/include/: Constants.h
src/include/audio/: FunkinSound.h  FunkinSoundSystem.h  SoundEnum.h
src/include/data/: BaseRegistry.h  Context.h  IRegistrableEntry.h
src/include/data/animation/: AnimationData.h  TextureAtlas.h
src/include/data/character/: CharacterData.h  CharacterRegistry.h
src/include/data/level/: LevelData.h  LevelRegistry.h
src/include/data/mod/: ModMetadata.h  ModRegistry.h
src/include/data/notestyle/: NoteStyleData.h  NoteStyleRegistry.h
src/include/data/song/: SongData.h  SongDifficulty.h  SongRegistry.h
src/include/data/stage/: StageData.h  StageRegistry.h
src/include/gameloop/: GameLoop.h
src/include/modding/: ModEngineType.h  ModListModel.h
src/include/modding/modmetadata/: ModMetadata.h  VersonRule.h
src/include/modding/scan/: ModManager.h
src/include/permissions/: GetAndroidStoragePermission.h
src/include/play/: ISerializable.h
src/include/play/event/: IHookEvents.h
src/include/play/game/: FNFObject.h  GameLoop.h
src/include/play/song/: Song.h
src/include/qmlReloader/: QmlReloader.h
src/include/save/: Save.h  SaveSystem.h
src/include/ui/buttons/: FButton.h  FButton.qml
src/include/utils/: GlobalSystemUtils.h  InstanceLibrary.h  Math.h  Path.h  VersionUtil.h
src/include/utils/exception/: CustomException.h
src/include/utils/extension/: ExtendJSONParse.h
src/include/utils/file/: FileUtil.h
src/include/utils/interseting/: InterestingThings.h
src/include/utils/lang/: LangStringPool.h
src/include/utils/message/: MessageHandler.h
src/include/utils/modding/: ModScanUtils.h
src/permissions/: GetPermissions.h
src/src/audio/: FunkinSound.cpp  FunkinSoundSystem.cpp  MiniaudioOggImpl.cpp  SoundEnum.cpp
src/src/data/: BaseRegistry.cpp  IRegistrableEntry.cpp
src/src/data/animation/: AnimationData.cpp
src/src/data/character/: CharacterData.cpp
src/src/data/level/: LevelData.cpp  LevelRegistry.cpp
src/src/data/mod/: ModRegistry.cpp
src/src/data/notestyle/: NoteStyleData.cpp
src/src/data/song/: SongData.cpp  SongRegistry.cpp
src/src/data/stage/: StageData.cpp
src/src/gameloop/: GameLoop.cpp
src/src/modding/: ModEngineType.cpp  ModListModel.cpp
src/src/modding/modmetadata/: ModMetadata.cpp  VersonRule.cpp
src/src/modding/scan/: ModManager.cpp
src/src/permissions/: GetAndroidStoragePermission.cpp
src/src/play/song/: Song.cpp
src/src/save/: Save.cpp  SaveSystem.cpp
src/src/utils/: GlobalSystemUtils.cpp  InstanceLibrary.cpp  Math.cpp  Path.cpp  VersionUtil.cpp
src/src/utils/exception/: CustomException.cpp
src/src/utils/file/: FileUtil.cpp  FileUtil.h
src/src/utils/lang/: LangStringPool.cpp
src/src/utils/modding/: GlobalSystemUtils.cpp  ModScanUtils.cpp
